--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "swiper": "^9.3.2"
+    "swiper": "^9.3.2",
+    "zustand": "^4.3.8"
   }
 }
