--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@splidejs/react-splide": "^0.7.12",
     "hamburger-react": "^2.5.0",
     "next": "13.4.3",
     "react": "18.2.0",
