--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
+    "formik": "^2.4.1",
     "hamburger-react": "^2.5.0",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "swiper": "^9.3.2",
+    "yup": "^1.2.0",
     "zustand": "^4.3.8"
   }
 }
