--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "hamburger-react": "^2.5.0",
     "mongodb": "^5.6.0",
     "next": "13.4.3",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-scroll": "^1.8.9",
     "swiper": "^9.3.2",
+    "uuid": "^9.0.0",
     "yup": "^1.2.0",
     "zustand": "^4.3.8"
   }
